Give the header timestamp some breathing room.

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -727,6 +727,10 @@ $cassette_btn_bg_color: $black;
       background-color: $orange;
     }
   }
+
+  .cassette__media_time_progress {
+    padding-left: 0.5rem;
+  }
 }
 
 .song_entry {
