Use videos instead of actual gifs (closes #2).

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -797,8 +797,8 @@ $cassette_btn_bg_color: $black;
       width: 250px;
     }
 
-    img {
-      margin: 0;
+    video {
+      width: 100%
     }
 
     &:not(.playing) .play_button {
