--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -10,7 +10,7 @@ html {
   font-family: 'IBM Plex Serif', serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  line-height: 1.8em;
+  line-height: 1.8;
 }
 body {
   margin: 0;
@@ -288,7 +288,6 @@ h1 {
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
-  line-height: 1.1;
 }
 h2 {
   margin-left: 0;
@@ -305,7 +304,6 @@ h2 {
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
-  line-height: 1.1;
 }
 h3 {
   margin-left: 0;
@@ -322,7 +320,6 @@ h3 {
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
-  line-height: 1.1;
 }
 h4 {
   margin-left: 0;
@@ -339,7 +336,6 @@ h4 {
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
-  line-height: 1.1;
 }
 h5 {
   margin-left: 0;
@@ -356,7 +352,6 @@ h5 {
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
-  line-height: 1.1;
 }
 h6 {
   margin-left: 0;
@@ -373,7 +368,6 @@ h6 {
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
-  line-height: 1.1;
 }
 hgroup {
   margin-left: 0;
@@ -733,6 +727,13 @@ $cassette_btn_bg_color: $black;
   }
 }
 
+.work_entry,
+.game_entry,
+.song_entry,
+.writing_category {
+  margin-bottom: 70px;
+}
+
 .song_entry {
   transition: max-height 0.5s ease-out;
 
@@ -745,7 +746,7 @@ $cassette_btn_bg_color: $black;
     top: -20px;
     transform: scaleY(0) translateY(50%);
     transition: transform 0.5s ease-out;
-    margin-bottom: -30px;
+    margin-bottom: -50px;
 
     &.active {
       transform: scaleY(1) translateY(0);
@@ -786,12 +787,6 @@ $cassette_btn_bg_color: $black;
     bottom: -10px;
     transform: scale(0.75) translateY(12.5%);
   }
-}
-
-.work_entry,
-.game_entry,
-.song_entry {
-  margin-bottom: 70px;
 }
 
 .work_entry {
@@ -836,5 +831,14 @@ $cassette_btn_bg_color: $black;
         font-family: 'IBM Plex Mono', sans-serif;
       }
     }
+  }
+}
+
+.writing_entry {
+  margin-bottom: 35px;
+
+  .date {
+    font-style: italic;
+    margin-bottom: 0.3rem;
   }
 }
